# ollama-model-installer

./: Cargo.toml  LICENSE  README.md  ollama-puller.workspace
src/: main.rs
